# Computer-Vision-Project-My-Version

./: CMakeLists.txt  index.html  video_snapshot_extractor.cpp
